deploy/k8s-local/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopops
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
